# Avito-Parser

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.bat  setup.cfg  start_bot.bat  start_parser.bat  stop_bot.bat
bot/: runner.py
config/: settings.py
core/: clients.py  dispatcher.py  parser.py
database/: db.py  models.py
services/: scheduler.py  worker.py
src/: main.py
tests/: test_smoke.py
utils/: helpers.py  logger.py
