[project]
name = "avito-parser"
version = "0.1.0"
description = "Modular parser with config, core, database, services, and utils"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Constructor" }]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


